java-plugin/src/test/cases/error/ReturnAssignment-13-16.java
import io.github.miracelwhipp.constness.annotation.Const;



class ReturnAssignment {

    @Const
    private Object object;


    public Object getObject() {

        return object; // compile error
    }

}